# serde_json_borrow

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench.rs  binggan_bench.rs  crit_bench.rs  hdfs.json  wiki.json
compile_fail_tests/: Cargo.toml  README.md  deserialize_borrow_conflict.rs  guard_outlives_string_scope.rs  guard_return_from_function.rs  guard_thread_safety.rs  leak_references_from_guard.rs  map_lifetime_soundness.rs  verify_soundness_failures.py
src/: cowstr.rs  de.rs  de_simd.rs  deserializer.rs  index.rs  lib.rs  num.rs  object_vec.rs  owned.rs  ownedvalue.rs  reusable.rs  ser.rs  value.rs
