[package]
name = "serde_json_borrow"
authors = ["Pascal Seitz <pascal.seitz@gmail.com"]
description = "Provides json deserialization into a borrowed DOM"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.145"
serde_json = "1.0.86"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "crit_bench"
harness = false
