[package]
name = "serde_json_borrow"
categories = ["parsing", "parser-implementations", "encoding"]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
description = "Provides JSON deserialization into a borrowed DOM"
version = "0.9.0"
edition = "2024"
license = "MIT"
keywords = ["JSON", "serde", "deserialization", "ref", "borrowed"]
exclude = ["benches/**/*.json"]
readme = "README.md"
repository = "https://github.com/PSeitz/serde_json_borrow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"

[dev-dependencies]
binggan = "0.14.0"
simd-json = "0.13.10"

[features]
default = ["cowkeys"]
# Uses Cow<str> instead of &str. This enables support for escaped data in keys.
# But it costs some deserialization performance.
cowkeys = []


[[bench]]
name = "bench"
harness = false
